tuples & dictionary & Storyboard reference.

--- a/Sanjay Project/storyboards/Base.lproj/Main.storyboard
+++ b/Sanjay Project/storyboards/Base.lproj/Main.storyboard
@@ -257,7 +257,7 @@ EEVudGVyIExhc3QgTmFtZQ
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzz-5l-RxU">
-                                        <rect key="frame" x="132.66666666666663" y="18" width="128" height="34"/>
+                                        <rect key="frame" x="132.66666666666666" y="18" width="127.99999999999997" height="34"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Select Student">
@@ -597,9 +597,20 @@ EEVudGVyIExhc3QgTmFtZQ
                                             <constraint firstAttribute="height" constant="10" id="oKh-Dh-4iX"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXe-uu-06N">
+                                        <rect key="frame" x="20" y="439.66666666666663" width="353" height="40.333333333333314"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="No account, Sign up now."/>
+                                        <buttonConfiguration key="configuration" style="tinted" title="No account, Sign up now."/>
+                                        <connections>
+                                            <segue destination="ZF1-cD-Bff" kind="show" id="qcf-Dr-ZYF"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="vXe-uu-06N" secondAttribute="bottom" constant="20" id="0ES-KR-w5M"/>
+                                    <constraint firstItem="vXe-uu-06N" firstAttribute="centerX" secondItem="bXx-iw-YCQ" secondAttribute="centerX" id="3Ui-RK-VpK"/>
                                     <constraint firstAttribute="height" constant="500" id="4iZ-9s-LoD"/>
                                     <constraint firstItem="peR-gJ-1C0" firstAttribute="top" secondItem="s8b-gg-8FK" secondAttribute="bottom" constant="15.666666666666671" id="Ebw-cX-cJV"/>
                                     <constraint firstItem="Uvw-09-lTi" firstAttribute="top" secondItem="bXx-iw-YCQ" secondAttribute="top" constant="10" id="I4c-UU-cPW"/>
@@ -608,6 +619,8 @@ EEVudGVyIExhc3QgTmFtZQ
                                     <constraint firstItem="s8b-gg-8FK" firstAttribute="leading" secondItem="bXx-iw-YCQ" secondAttribute="leading" constant="20" id="SVh-1i-VaK"/>
                                     <constraint firstAttribute="trailing" secondItem="s8b-gg-8FK" secondAttribute="trailing" constant="20" id="W6Z-1t-VVU"/>
                                     <constraint firstItem="peR-gJ-1C0" firstAttribute="leading" secondItem="bXx-iw-YCQ" secondAttribute="leading" constant="20" id="XOX-0l-7WJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="vXe-uu-06N" secondAttribute="trailing" constant="20" id="hp9-o2-X1G"/>
+                                    <constraint firstItem="vXe-uu-06N" firstAttribute="leading" secondItem="bXx-iw-YCQ" secondAttribute="leading" constant="20" id="mL9-Jx-ZZx"/>
                                     <constraint firstItem="s8b-gg-8FK" firstAttribute="top" secondItem="bXx-iw-YCQ" secondAttribute="top" constant="50" id="qWy-Mf-cms"/>
                                 </constraints>
                             </view>
@@ -800,6 +813,16 @@ EEVudGVyIExhc3QgTmFtZQ
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ce2-fZ-ICL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3594.6564885496182" y="1453.5211267605634"/>
+        </scene>
+        <!--SignUpWithMobile-->
+        <scene sceneID="a1p-Ly-Ome">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SignUp" referencedIdentifier="SignUpWithMobile" id="ZF1-cD-Bff" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="y5q-A2-dtV"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qkl-E9-KGA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3209" y="1882"/>
         </scene>
     </scenes>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
